--- a/DashBoard.ipynb
+++ b/DashBoard.ipynb
@@ -1,25 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Deni1019/Bootcamp-Caracteristicas-del-mercado-energ-tico/blob/main/DashBoard.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -27,9 +12,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "pip install streamlit plotly pandas seaborn matplotlib"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -37,11 +20,10 @@
         "id": "StiFawvpP2S2",
         "outputId": "ecf186cb-59ca-4055-99dd-bbd0be5f006e"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: streamlit in /usr/local/lib/python3.11/dist-packages (1.48.1)\n",
             "Requirement already satisfied: plotly in /usr/local/lib/python3.11/dist-packages (5.24.1)\n",
@@ -90,10 +72,18 @@
             "Requirement already satisfied: rpds-py>=0.7.1 in /usr/local/lib/python3.11/dist-packages (from jsonschema>=3.0->altair!=5.4.0,!=5.4.1,<6,>=4.0->streamlit) (0.27.0)\n"
           ]
         }
+      ],
+      "source": [
+        "pip install streamlit plotly pandas seaborn matplotlib"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "jIw6vUuHQaCX"
+      },
+      "outputs": [],
       "source": [
         "import streamlit as st\n",
         "import plotly.express as px\n",
@@ -104,32 +94,25 @@
         "from plotly.subplots import make_subplots\n",
         "from datetime import datetime, timedelta\n",
         "import numpy as np\n"
-      ],
-      "metadata": {
-        "id": "jIw6vUuHQaCX"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "7c_eI_6wSFlX"
+      },
+      "outputs": [],
       "source": [
         "np.random.seed(42)\n",
         "fechas = pd.date_range('2023-01-01', '2024-12-31', freq = 'D')\n",
         "n_productos = ['Laptop','Mouse','Teclado','Monitor','Auriculares']\n",
         "regiones = ['Norte', 'Sur', 'Este', 'Oeste', 'Centro']\n"
-      ],
-      "metadata": {
-        "id": "7c_eI_6wSFlX"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(len(fechas))"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -137,19 +120,26 @@
         "id": "fAKo5dEcU--V",
         "outputId": "c6e02040-25f4-468a-9553-3c7cd6776378"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "731\n"
           ]
         }
+      ],
+      "source": [
+        "print(len(fechas))"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "uIBuC_AtVGnl"
+      },
+      "outputs": [],
       "source": [
         "data = []\n",
         "for fecha in fechas:\n",
@@ -164,32 +154,22 @@
         "               'vendedor': f'Vendedor_{np.random.randint(1,21)}'\n",
         "           }\n",
         "       )"
-      ],
-      "metadata": {
-        "id": "uIBuC_AtVGnl"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "df = pd.DataFrame(data)\n",
-        "df['venta_total'] = df['cantidad'] * df['precio_unitario']\n",
-        "print(df)"
-      ],
+      "execution_count": null,
       "metadata": {
-        "id": "WxXVDjngWX7V",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "WxXVDjngWX7V",
         "outputId": "1d2d4703-6c53-464c-964e-c67993b64618"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "          Fecha     Producto  Region  cantidad  precio_unitario     vendedor  \\\n",
             "0    2023-01-01        Mouse    Este         3       715.910893   Vendedor_4   \n",
@@ -220,13 +200,16 @@
             "[7253 rows x 7 columns]\n"
           ]
         }
+      ],
+      "source": [
+        "df = pd.DataFrame(data)\n",
+        "df['venta_total'] = df['cantidad'] * df['precio_unitario']\n",
+        "print(df)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "df.head()"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -235,26 +218,9 @@
         "id": "uRQGGi5BX4V8",
         "outputId": "79631336-73e6-4d3f-897e-685b591a3628"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "       Fecha Producto  Region  cantidad  precio_unitario     vendedor  \\\n",
-              "0 2023-01-01    Mouse    Este         3       715.910893   Vendedor_4   \n",
-              "1 2023-01-01  Teclado  Centro         2      1096.898220   Vendedor_6   \n",
-              "2 2023-01-01    Mouse   Oeste         5       945.348189  Vendedor_12   \n",
-              "3 2023-01-01   Laptop   Norte         3       937.186697  Vendedor_10   \n",
-              "4 2023-01-01  Monitor   Oeste         3       604.569887  Vendedor_20   \n",
-              "\n",
-              "   venta_total  \n",
-              "0  2147.732680  \n",
-              "1  2193.796440  \n",
-              "2  4726.740945  \n",
-              "3  2811.560092  \n",
-              "4  1813.709662  "
-            ],
             "text/html": [
               "\n",
               "  <div id=\"df-47175e0c-124b-414e-a0c2-928d096b52d4\" class=\"colab-df-container\">\n",
@@ -421,18 +387,35 @@
               "    </div>\n",
               "  </div>\n",
               "  "
+            ],
+            "text/plain": [
+              "       Fecha Producto  Region  cantidad  precio_unitario     vendedor  \\\n",
+              "0 2023-01-01    Mouse    Este         3       715.910893   Vendedor_4   \n",
+              "1 2023-01-01  Teclado  Centro         2      1096.898220   Vendedor_6   \n",
+              "2 2023-01-01    Mouse   Oeste         5       945.348189  Vendedor_12   \n",
+              "3 2023-01-01   Laptop   Norte         3       937.186697  Vendedor_10   \n",
+              "4 2023-01-01  Monitor   Oeste         3       604.569887  Vendedor_20   \n",
+              "\n",
+              "   venta_total  \n",
+              "0  2147.732680  \n",
+              "1  2193.796440  \n",
+              "2  4726.740945  \n",
+              "3  2811.560092  \n",
+              "4  1813.709662  "
             ]
           },
+          "execution_count": 7,
           "metadata": {},
-          "execution_count": 7
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "df.head()"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(df.describe())"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -440,11 +423,10 @@
         "id": "VQR8N8JGX8I0",
         "outputId": "4d1e1903-0700-4dc4-e44b-6b1199fe8785"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "                               Fecha     cantidad  precio_unitario  \\\n",
             "count                           7253  7253.000000      7253.000000   \n",
@@ -467,15 +449,14 @@
             "std    1762.451173  \n"
           ]
         }
+      ],
+      "source": [
+        "print(df.describe())"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "df_monthly = df.groupby(df['Fecha'].dt.to_period('M'))['venta_total'].sum().reset_index()\n",
-        "df_monthly['Fecha'] = df_monthly['Fecha'].astype(str)\n",
-        "print(df_monthly)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -483,11 +464,10 @@
         "id": "uLy7kgYFY9SE",
         "outputId": "13751bf5-4244-4858-bd20-950f0b944452"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "      Fecha    venta_total\n",
             "0   2023-01  698236.092223\n",
@@ -516,18 +496,101 @@
             "23  2024-12  639166.246043\n"
           ]
         }
+      ],
+      "source": [
+        "df_monthly = df.groupby(df['Fecha'].dt.to_period('M'))['venta_total'].sum().reset_index()\n",
+        "df_monthly['Fecha'] = df_monthly['Fecha'].astype(str)\n",
+        "print(df_monthly)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "fig_"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "5hXQZqGkZlfM"
       },
+      "outputs": [],
+      "source": [
+        "fig_monthly = px.line(df_monthly, x= 'Fecha', y= 'venta_total',\n",
+        "                       title= 'Ventas Mensuales',\n",
+        "                       labels = {'venta_total': 'Ventas ($)', 'Fecha': 'Mes'})\n",
+        "fig_monthly.update_traces(line= dict(width=3))"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
-      "outputs": []
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Top productos\n",
+        "df_productos = df.groupby('Producto')['venta_total'].sum().sort_values(ascending= False)\n",
+        "fig_productos = px.bar(x = df_productos.values,\n",
+        "                       y= df_productos.index,\n",
+        "                       orientation = 'h',\n",
+        "                       title = 'Distribucion de ventas por producto',\n",
+        "                       labels = {'x': 'Ventas ($)', 'y': 'Producto'})\n",
+        "\n",
+        "df_regiones = df.groupby('Region')['venta_total'].sum().reset_index()\n",
+        "fig_regiones = px.pie(df_regiones,\n",
+        "                      values= 'venta_total',\n",
+        "                      names= 'Region',\n",
+        "                      title= 'Distribucion de ventas por region')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "fig_regiones.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df_corr = df[['cantidad','precio_unitario','venta_total']]\n",
+        "corr_matrix = df_corr.corr()\n",
+        "fig_heatmap = px.imshow(corr_matrix,\n",
+        "                        text_auto=True,\n",
+        "                        color_continuous_scale= 'RdBu',\n",
+        "                        title= 'Matriz de correlacion')\n",
+        "fig_heatmap.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "fig_dist = px.histogram(df,\n",
+        "                        x= 'venta_total',\n",
+        "                        nbins= 30,\n",
+        "                        title= 'Distribucion de ventas',\n",
+        "                        color_discrete_sequence= ['indianred'],\n",
+        "                        labels= {'venta_total': 'Ventas ($)'})\n",
+        "fig_dist.show()"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
